--- a/app/globals.css
+++ b/app/globals.css
@@ -4,8 +4,8 @@
 
 @layer base {
   :root {
-    --background: 13 13 13;
-    --foreground: 0 0% 98%;
+    --background: 0 0% 100%;
+    --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
@@ -72,9 +72,9 @@ html {
   scroll-behavior: smooth;
 }
 
-/* body {
+body {
   background-color: #0d0d0d;
-} */
+}
 
 /* Leaflet CSS */
 @import 'leaflet/dist/leaflet.css';
